--- a/style.css
+++ b/style.css
@@ -11,8 +11,9 @@ body {
 #map-canvas{
   height: 50%;
    width: 50%;
-   margin: 0 0 0 2em;
-   text-align: center;
+   margin-left:auto;
+   margin-right:auto;
+
 
  }
 #intro {
