--- a/style.css
+++ b/style.css
@@ -19,3 +19,10 @@ body {
 #intro {
   padding-left: 2em;
 }
+
+$font-stack:    Helvetica, sans-serif
+$primary-color: #333
+
+body
+  font: 100% $font-stack
+  color: $primary-color
